Karmello/puzzle-games#62: updated User model
