# routes/users.js
@@ -2,6 +2,7 @@ const jwt = require('jsonwebtoken');
 
 const { User } = require('./../models');
 const checkAuthorization = require('./../middleware/checkAuthorization');
+const defaultUiState = require('./../db/data/uiState');
 
 
 module.exports = function(router) {
@@ -10,6 +11,7 @@ module.exports = function(router) {
     
     const user = new User(req.body);
     user.registeredAt = Date.now();
+    user.uiState = defaultUiState;
     
     user.save(err => {
       if (err) {
